--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,10 @@
 :root {
   --basic-black: #000000;
   --black-opacity-10: rgba(0, 0, 0, 0.1);
+  --black-opacity-15: rgba(0, 0, 0, 0.15);
   --black-opacity-20: rgba(0, 0, 0, 0.2);
   --black-opacity-30: rgba(0, 0, 0, 0.3);
+  --black-opacity-40: rgba(0, 0, 0, 0.4);
   --black-opacity-50: rgba(0, 0, 0, 0.5);
   --black-opacity-60: rgba(0, 0, 0, 0.6);
   --basic-white: #FFFFFF;
@@ -48,6 +50,8 @@
   --white-opacity-70: rgba(255, 255, 255, 0.7);
   --special-yellow: #F7E296;
   --special-yellow-dark: #F0C52E;
+  --special-yellow-dark-30: rgba(240, 197, 46, 0.3);
+  --special-yellow-dark-50: rgba(240, 197, 46, 0.5);
   --additional-yellow: #FFC600;
   --basic-dark: #363636;
   --basic-grey-light: #E5E5E5;
@@ -59,6 +63,9 @@
   --toggles-grey: #C4C4C4;
   --toggles-shadow: rgba(0, 0, 0, 0.18);
   --disabled-label: #A6A6A6;
+  --input-grey-bg: #F2F2F2;
+  --input-grey-hover: #EAEAEA;
+  --input-invalid: #F6DADA;
 }
 
 body {
@@ -1666,4 +1673,215 @@ img {
 .pagination-pages-link-current:active {
   color: var(--basic-black);
   cursor: default;
+}
+
+/* Modal */
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  background-color: var(--basic-white);
+  box-shadow: 0px 10px 16px var(--black-opacity-15);
+  z-index: 5;
+}
+
+.modal-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
+.modal-feedback {
+  width: 760px;
+  height: 403px;
+  padding: 92px 100px 55px;
+}
+
+.modal-feedback-wrapper-columns {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 32px;
+}
+
+.modal-feedback-column {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 50%;
+}
+
+.modal-feedback-column:first-child {
+  margin-right: 40px;
+}
+
+.modal-feedback-label {
+  display: block;
+  margin-bottom: 10px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+}
+
+.modal-feedback-input,
+.modal-feedback-textarea {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 17px 20px 15px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 400;
+  border: none;
+  background-color: var(--input-grey-bg);
+  color: inherit;
+}
+
+.modal-feedback-textarea {
+  height: 167px;
+  margin-bottom: 40px;
+}
+
+.modal-feedback-input::placeholder,
+.modal-feedback-textarea::placeholder {
+ color: var(--black-opacity-40);
+}
+
+.modal-feedback-input:hover,
+.modal-feedback-textarea:hover {
+ background-color: var(--input-grey-hover);
+}
+
+.modal-feedback-input:focus,
+.modal-feedback-textarea:focus {
+  outline: 2px solid var(--special-yellow);
+  outline-offset: -2px;
+  background-color: var(--basic-white);
+}
+
+.modal-feedback-invalid,
+.modal-feedback-invalid:hover {
+  background-color: var(--input-invalid);
+}
+
+.modal-feedback-invalid:focus {
+  background-color: var(--basic-white);
+}
+
+.modal-feedback-button {
+  margin-left: -2px;
+  padding-top: 1px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  outline: none;
+}
+
+.modal-feedback-button::before {
+  background-color: var(--special-yellow);
+  left: 2px;
+}
+
+.modal-close {
+  width: 55px;
+  height: 55px;
+  border: none;
+  border-radius: 50%;
+  background-color: var(--special-yellow-dark-50);
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+  width: 25px;
+  height: 3px;
+  position: absolute;
+  top: 26px;
+  right: 15px;
+  background-color: var(--basic-white);
+  opacity: 70%;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: var(--special-yellow-dark);
+}
+
+.modal-close:active {
+  background-color: var(--special-yellow-dark-30);
+}
+
+.modal-map {
+  width: 960px;
+  height: 559px;
+}
+
+.modal-map-image {
+  position: absolute;
+}
+
+.modal-map-google {
+  position: relative;
+  border: none;
+  z-index: 1;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateX(-2000px);
+  }
+
+  70% {
+    transform: translateX(30px);
+  }
+
+  90% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
